# todo-console-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: governor-agent.md
.specify/memory/: constitution.md
history/prompts/001-todo-app/: 0001-todo-console-app-spec.spec.prompt.md  0002-todo-console-app-plan.plan.prompt.md  0003-todo-console-app-tasks.tasks.prompt.md  0004-todo-console-app-implementation.green.prompt.md
history/prompts/constitution/: 0001-update-constitution-for-todo-app.constitution.prompt.md
history/prompts/general/: 0001-commit-constitution-changes.general.prompt.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: cli-contracts.md
src/: __main__.py  main.py
src/todo_app/: __init__.py
src/todo_app/cli/: todo_cli.py
src/todo_app/models/: todo_item.py
src/todo_app/persistence/: file_storage.py
src/todo_app/services/: todo_service.py
